# stiX

./: .gitignore  LICENSE  README  README.adoc  README.md
c++/: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  README  configure.ac  test_all.sh
c++/chapter1/: 1_copy_1.cpp  1_copy_2.cpp  1_copy_3.cpp  1_copy_4.cpp  1_copy_5.cpp  2_charcount_1.cpp  2_charcount_2.cpp  2_charcount_3.cpp  2_charcount_4.cpp  3_linecount_1.cpp  3_linecount_2.cpp  3_linecount_3.cpp  3_linecount_4.cpp  3_linecount_5.cpp  3_linecount_6.cpp  4_wordcount_1.cpp  4_wordcount_2.cpp  5_detab.cpp  5_detab_2.cpp
c++/chapter2/: 1_entab_1.cpp  1_entab_2.cpp
c++/chapter_1/: test.cpp
c++/chapter_1/1_copy/: 1_copy.cpp  1_copy_test.cpp  copy.cpp  copy.h  test.cpp
c++/chapter_1/2_charcount/: 2_charcount.cpp  charcount.cpp  charcount.h  charcount.hpp  test.cpp
c++/chapter_1/3_linecount/: 3_linecount.cpp  linecount.cpp  linecount.h  linecount.hpp  test.cpp
c++/chapter_1/4_wordcount/: 4_wordcount.cpp  test.cpp  wordcount.cpp  wordcount.h  wordcount.hpp
c++/chapter_1/5_detab/: 5_detab.cpp  detab.cpp  detab.h  detab.hpp  detab_impl.h  tab_stops.h  test.cpp  test_detabber.cpp
c++/chapter_2/: test.cpp
c++/chapter_2/1_entab/: 1_entab.cpp  entab.cpp  entab.h  entab.hpp  test.cpp
c++/chapter_2/2_overstrike/: 2_overstrike.cpp  overstrike.cpp  overstrike.h  overstrike.hpp  test.cpp
c++/chapter_2/3_compress/: 3_compress.cpp  compress.cpp  compress.h  compress.hpp  test.cpp
c++/chapter_2/4_expand/: 4_expand.cpp  expand.cpp  expand.h  expand.hpp  test.cpp
c++/chapter_2/5_echo/: 5_echo.cpp  echo.cpp  echo.h  echo.hpp  test.cpp
c++/chapter_2/6_translit/: 6_translit.cpp  test.cpp  translit-args.cpp  translit-args.hpp  translit.cpp  translit.hpp
c++/chapter_3/1_compare/: 1_compare.cpp  compare.cpp  compare.hpp  test.cpp
c++/chapter_3/2_include/: 2_include.cpp  include.cpp  include.hpp  test.cpp
c++/chapter_3/3_concat/: 3_concat.cpp
c++/chapter_3/4_print/: 4_print.cpp  print.cpp  print.hpp  test.cpp
c++/chapter_3/5_makecopy/: 5_makecopy.cpp
c++/chapter_3/6_archive/: 6_archive.cpp  append.cpp  append.hpp  archive.cpp  archive.hpp  archive_file.cpp  archive_file.hpp  create.cpp  create.hpp  delete.cpp  delete.hpp  extract.cpp  extract.hpp  print.cpp  print.hpp  source.arc  table.cpp  table.hpp  test.cpp
c++/chapter_3/6_archive/test/: test_create.inc  test_delete.inc  test_extract.inc  test_print.inc  test_table.inc  test_update.inc
c++/chapter_4/0_sorts/: bubble_sort.cpp  merge_sort.cpp  quick_sort.cpp  shell_sort.cpp  sorts.cpp
c++/chapter_4/1_sort/: 1_sort.cpp
c++/chapter_4/2_external_sort/: 2_external_sort.cpp  merge_files.cpp  merge_files.hpp  read_to_files.cpp  read_to_files.hpp  test.cpp  working_filepaths.cpp  working_filepaths.hpp
c++/chapter_4/3_unique/: 3_unique.cpp  test.cpp  unique.cpp  unique.h  unique.hpp
c++/chapter_4/4_kwic/: 4_kwic.cpp  kwic.cpp  kwic.h  kwic.hpp  main.cpp  test.cpp
c++/chapter_4/5_unrotate/: 5_unrotate.cpp  test.cpp  unrotate.cpp  unrotate.hpp
c++/chapter_5/1_find/: 1_find.cpp  all  char_seq.cpp  char_seq.hpp  find.cpp  find.hpp  matcher.cpp  matcher.hpp  pattern_matcher.cpp  pattern_matcher.hpp  test.cpp
c++/chapter_5/1_find_cheating/: 1_find_cheating.cpp
c++/chapter_5/2_change/: 2_change.cpp  change.cpp  change.hpp  replacement.cpp  replacement.hpp  test.cpp
c++/chapter_6/1_edit/: 1_edit.cpp  command.cpp  command.hpp  command_actions.cpp  command_actions.hpp  command_parser.cpp  command_parser.hpp  commands.cpp  commands.hpp  edit_buffer.cpp  edit_buffer.hpp  editor.cpp  editor.hpp  line_buffer.cpp  line_buffer.hpp  lines.hpp  test.cpp  test_command_actions.cpp  test_command_parser.cpp  test_edit_buffer.cpp  test_editor.cpp  test_line_buffer.cpp
c++/chapter_7/1_format/: 1_format.cpp  filler.cpp  filler.hpp  format.cpp  format.hpp  format_functions.cpp  format_functions.hpp  formatter.cpp  formatter.hpp  test_format.cpp  test_functions.cpp
c++/chapter_7/1_format/samples/: make-the-call.txt
c++/chapter_7/1_format/test_fixtures/bold/: hello_world.exp  hello_world.txt  it_is_a_truth.exp  it_is_a_truth.txt  midline.exp  midline.txt
c++/chapter_7/1_format/test_fixtures/break/: hello_mother_father.exp  hello_mother_father.txt
c++/chapter_7/1_format/test_fixtures/centre/: good_programming.exp  good_programming.txt  good_programming_underline.exp  good_programming_underline.txt  it_is_a_truth.exp  it_is_a_truth.txt  on_then_off.exp  on_then_off.txt
c++/chapter_7/1_format/test_fixtures/footer/: however.exp  however.txt  leading_quote.exp  (+3 more)
c++/chapter_8/1_macro/: 1_macro.cpp  end_of_input.hpp  macro.cpp  macro.hpp  test_macro.cpp  test_tokenizer.cpp  token_buffer.cpp  token_buffer.hpp  token_seq.cpp  token_seq.hpp  token_source.cpp  token_source.hpp  token_stream.cpp  token_stream.hpp  tokenizer.cpp  tokenizer.hpp
c++/chapter_8/1_macro/mp/: predefined.hpp  support.cpp  support.hpp
c++/chapter_8/1_macro/source/: expression_engine.cpp  expression_engine.hpp  token_buffer.cpp  token_buffer.hpp  token_seq.hpp  token_source.cpp  token_source.hpp  token_stream.cpp  token_stream.hpp
c++/chapter_8/1_macro/test/: test.cpp  test.hpp  test_changeq.cpp  test_expr.cpp  test_expression_engine.cpp  test_ifelse.cpp  test_len.cpp  test_macro.cpp  test_quotes.cpp  test_substr.cpp  test_tokenizer.cpp
c++/lib/: arguments.cpp  arguments.h  arguments.hpp  chars.cpp  chars.h  chars.hpp  copy.cpp  dash_range.cpp  dash_range.hpp  escapes.cpp  escapes.hpp  file_open.cpp  file_open.hpp  filter.h  filter.hpp  getline.cpp  getline.h  getline.hpp  join.hpp  tab_stops.h  tab_stops.hpp
c++/lib/regex/: change.cpp  change.hpp  char_seq.cpp  char_seq.hpp  matcher.cpp  matcher.hpp  pattern_matcher.cpp  pattern_matcher.hpp  replacement.cpp  replacement.hpp
c++/m4/: ax_boost_base.m4
c++/testlib/: label_escape.cpp  label_escape.h  label_escape.hpp  sample_strings.cpp  sample_strings.h  sample_strings.hpp  test_filter.cpp  test_filter.h  test_filter.hpp  testlib.h  testlib.hpp  verify_with_samples.cpp  verify_with_samples.h  verify_with_samples.hpp
(+87 files in other folders)
