ACLOCAL_AMFLAGS = -I m4

noinst_PROGRAMS = 11_copy_1 \
                  11_copy_2 \
                  11_copy_3 \
                  11_copy_4 \
                  11_copy_5 

11_copy_1_SOURCES = chapter1/1_copy_1.cpp
11_copy_2_SOURCES = chapter1/1_copy_2.cpp
11_copy_3_SOURCES = chapter1/1_copy_3.cpp
11_copy_4_SOURCES = chapter1/1_copy_4.cpp
11_copy_5_SOURCES = chapter1/1_copy_5.cpp

