ACLOCAL_AMFLAGS = -I m4

noinst_PROGRAMS = 11_copy_1 \
                  11_copy_2 \
                  11_copy_3 \
                  11_copy_4 \
                  11_copy_5 \
                  12_charcount_1 \
                  12_charcount_2 \
                  12_charcount_3 \
                  12_charcount_4 \
                  13_linecount_1 \
                  13_linecount_2 \
                  13_linecount_3 \
                  13_linecount_4 \
                  13_linecount_5 \
                  13_linecount_6 \
                  14_wordcount_1 \
                  14_wordcount_2

11_copy_1_SOURCES = chapter1/1_copy_1.cpp
11_copy_2_SOURCES = chapter1/1_copy_2.cpp
11_copy_3_SOURCES = chapter1/1_copy_3.cpp
11_copy_4_SOURCES = chapter1/1_copy_4.cpp
11_copy_5_SOURCES = chapter1/1_copy_5.cpp

12_charcount_1_SOURCES = chapter1/2_charcount_1.cpp
12_charcount_2_SOURCES = chapter1/2_charcount_2.cpp
12_charcount_3_SOURCES = chapter1/2_charcount_3.cpp
12_charcount_4_SOURCES = chapter1/2_charcount_4.cpp

13_linecount_1_SOURCES = chapter1/3_linecount_1.cpp
13_linecount_2_SOURCES = chapter1/3_linecount_2.cpp
13_linecount_3_SOURCES = chapter1/3_linecount_3.cpp
13_linecount_4_SOURCES = chapter1/3_linecount_4.cpp
13_linecount_5_SOURCES = chapter1/3_linecount_5.cpp
13_linecount_6_SOURCES = chapter1/3_linecount_6.cpp

14_wordcount_1_SOURCES = chapter1/4_wordcount_1.cpp
14_wordcount_2_SOURCES = chapter1/4_wordcount_2.cpp
