ACLOCAL_AMFLAGS = -I m4

AM_CXXFLAGS=-std=c++0x

noinst_PROGRAMS = copy_1 \
                  copy_2 \
                  copy_3 \
                  copy_4 \
                  copy_5 \
                  charcount_1 \
                  charcount_2 \
                  charcount_3 \
                  charcount_4 \
                  linecount_1 \
                  linecount_2 \
                  linecount_3 \
                  linecount_4 \
                  linecount_5 \
                  linecount_6 \
                  wordcount_1 \
                  wordcount_2 \
                  detab_1 \
                  detab_2 \
                  entab_1 \
                  entab_2

copy_1_SOURCES = chapter1/1_copy_1.cpp
copy_2_SOURCES = chapter1/1_copy_2.cpp
copy_3_SOURCES = chapter1/1_copy_3.cpp
copy_4_SOURCES = chapter1/1_copy_4.cpp
copy_5_SOURCES = chapter1/1_copy_5.cpp

charcount_1_SOURCES = chapter1/2_charcount_1.cpp
charcount_2_SOURCES = chapter1/2_charcount_2.cpp
charcount_3_SOURCES = chapter1/2_charcount_3.cpp
charcount_4_SOURCES = chapter1/2_charcount_4.cpp

linecount_1_SOURCES = chapter1/3_linecount_1.cpp
linecount_2_SOURCES = chapter1/3_linecount_2.cpp
linecount_3_SOURCES = chapter1/3_linecount_3.cpp
linecount_4_SOURCES = chapter1/3_linecount_4.cpp
linecount_5_SOURCES = chapter1/3_linecount_5.cpp
linecount_6_SOURCES = chapter1/3_linecount_6.cpp

wordcount_1_SOURCES = chapter1/4_wordcount_1.cpp
wordcount_2_SOURCES = chapter1/4_wordcount_2.cpp

detab_1_SOURCES = chapter1/5_detab_1.cpp
detab_2_SOURCES = chapter1/5_detab_2.cpp

entab_1_SOURCES = chapter2/1_entab_1.cpp
entab_2_SOURCES = chapter2/1_entab_2.cpp
